--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="navbar-nav">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="{% url 'first:home' %}">Home</a>
+          <a class="nav-link" href="{% url 'first:create_todo' %}">Create Todo</a>
     </div>
 </nav>
