--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -3,7 +3,7 @@
             <a class="nav-link" href="{% url 'first:home' %}">Home</a>
             <a class="nav-link" href="{% url 'first:create_todo' %}">Create Todo</a>
         {% if request.user.is_authenticated %}
-            <a class="nav-link" href="/">Logout</a>
+            <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
         {% else %}
             <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
         {% endif %}        
