password resete done.

--- a/accounts/templates/accounts/password_reset_email.html
+++ b/accounts/templates/accounts/password_reset_email.html
@@ -1,9 +1,5 @@
-<p>
-    someone asked for reset password for this {{ email }}.
-</p><br>
-<p>
-    please click on link below:
-</p>
-<p>
-    {{ protocol }}://{{ domain }}/{% url 'password_reset_confirm' uidb64=uid token=token %}
-</p>
+someone asked for reset password for this {{ email }}.
+
+please click on link below:
+
+{{ protocol }}://{{ domain }}/{% url 'accounts:password_reset_confirm' uidb64=uid token=token %}
