--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -6,6 +6,7 @@
             <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
         {% else %}
             <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
-        {% endif %}        
+        {% endif %}
+        <a class="nav-link" href="{% url 'first:month_todo' 2021 10 %}">Archive This Month</a>
     </div>
 </nav>
